backend/backend_deployment/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-api-deployment
  namespace: quiz-app
  labels:
    app: quiz-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz-api
  template:
    metadata:
      namespace: quiz-app
      labels:
        app: quiz-api
    spec:
      containers:
      - name: quiz-api-container
        image: localhost:32000/quiz-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
