backend/backend_deployment/gpc-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-api-deployment
  namespace: quiz-app
  labels:
    app: quiz-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz-api
  template:
    metadata:
      namespace: quiz-app
      labels:
        app: quiz-api
    spec:
      containers:
      - name: quiz-api-container
        image: europe-west4-docker.pkg.dev/sc-group31/quiz-place-repository/quiz-app:v6
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
