backend/backend_deployment/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-api-service
  namespace: quiz-app
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 5000
  selector:
    app: quiz-api
